# libelfutil

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE
cmake/modules/: AddGoogleTest.cmake  ExportElfUtilTargets.cmake  FetchLIEF.cmake
cmake/package/: ElfUtilConfig.cmake.in  ElfUtilConfigVersion.cmake.in
include/elfutil/: ElfFile.h  elf.h  elffile.h  elffiledependenciesresolver.h  elfutil.h  errors.h
src/: CMakeLists.txt
src/elfutil/: DependenciesMapper.cpp  DependenciesMapper.h  ElfFile.cpp  ElfFileDependenciesResolver.cpp  ElfFileDependenciesResolver.h  LibrariesCache.cpp  LibrariesCache.h  elf.cpp  elffile.cpp  elfutil.cpp  elfutil_private.h  errors.cpp  ldcache.cpp  ldcache.hpp  log.cpp  log.h  misc.hpp
tests/: CMakeLists.txt  ElfFIleUnitTests.cpp  ElfUtilUnitTests.cpp
tests/simple_library/: CMakeLists.txt  simple_library.cpp
tests/simple_library2/: CMakeLists.txt  simple_library2.cpp
